load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@pip_deps//:requirements.bzl", "requirement")

load("@io_bazel_rules_docker//python:image.bzl", "py_image")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")



compile_pip_requirements(
    name = "compile_requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)


py_binary(
  name = "main",
  main = "scraper.py",
  srcs = ["scraper.py"],
  deps = [
    requirement("requests"),
    requirement("beautifulsoup4"),
    requirement("lxml"),
    requirement("aiohttp"),
  ]
)

py_image(
  name = "test_py_image",
  main = "scraper.py",
  srcs = ["scraper.py"],
  deps = [
    requirement("requests"),
    requirement("beautifulsoup4"),
    requirement("lxml"),
    requirement("aiohttp"),
  ]
)


py3_image(
  name = "test_py3_image",
  main = "scraper.py",
  srcs = ["scraper.py"],
  deps = [
    requirement("requests"),
    requirement("beautifulsoup4"),
    requirement("lxml"),
    requirement("aiohttp"),
  ]
)